center title and made css file

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" type="text/css" href="css/index.css">
 <head>
 	<title>Joe Exotic</title>
-	<h1>Joe Exotic</h1>
+	<center><h1>Joe Exotic</h1></center>
 </head>
 
 
