header aesthetic changes

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" type="text/css" href="css/index.css">
+<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 <head>
 	<title>Joe Exotic</title>
-	<center><h1>Joe Exotic</h1></center>
+	<h1>Joe Exotic</h1>
 </head>
 
 
