--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <link rel="stylesheet" type="text/css" href="css/index.css">
 <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-<head>
+<header>
 	<title>Joe Exotic</title>
 	<h1>Joe Exotic</h1>
-</head>
+</header>
 
 
 <body>
