--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <link rel="stylesheet" type="text/css" href="css/index.css">
 <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+<link rel="icon" href="img/joe-exotic.jpeg">
 <header>
 	<title>Joe Exotic</title>
 	<h1>Joe Exotic</h1>
