--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <h2> About Joe</h2>
 <img src="img/joe-exotic.jpeg">
-<p> Joe Exotic is a gun-using, foul-talking, man-loving cowboy. He used to own a private Zoo, constantly in contest with animal-rights people. After being moved, Joe is now at Federal Medical Center Fort Worth recieving medical treatment. </p>
+<p> Joe Exotic is a gun-using, foul-talking, man-loving cowboy. He used to own a private Zoo, constantly in contest with animal-rights people. Joe is serving many sentences in prison, including voilation of the Animal Rights Act and the attempted murder of Carole Baskin. After being moved, Joe is now at Federal Medical Center Fort Worth recieving medical treatment. </p>
 
 <h2> Joe's Enemies</h2>
 
