--- a/index.html
+++ b/index.html
@@ -27,4 +27,33 @@
 <p> Again, this man was a friend of Joe to begin with, largely bailing him out of the situation with Baskin. However, he is also the reason for Joe's removal of the zoo and eventual imprisonement.</p>
 </body>
 <footer>This website is brought to you by a teenager who is bored in quaranine &copy;</footer>
+<style>
+	header{
+	background-color: orange;
+	padding: 50px;
+	margin: 0;
+}
+h1{
+	font-family: 'Permanent Marker', cursive;
+	font-size: 100px;
+	text-align: center;
+}
+h2{
+	font-family: 'Permanent Marker', cursive;
+    font-size:40px;
+}
+h3{
+	font-family: 'Permanent Marker', cursive;
+     font-size:20px;
+}
+p{
+	font-family: verdana;
+	color: orange;
+}
+h2, h3{
+	color: orange;
+}
+body{
+	background-color: black;}
+<style>
 </html>
