--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" type="text/css" href="css/index.css">
 <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 <link rel="icon" href="img/tiger.jpeg">
+<img src="img/tiger.jpeg" alt="Avatar">
 <header>
 	<title>Joe Exotic</title>
 	<h1>Joe Exotic</h1>
@@ -54,6 +55,8 @@ h2, h3{
 	color: orange;
 }
 body{
-	background-color: black;}
+	background-color: black;
+	imag
+}
 </style>
 </html>
