--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <link rel="stylesheet" type="text/css" href="css/index.css">
 <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 <link rel="icon" href="img/tiger.jpeg">
-<img src="img/tiger.jpeg" alt="Avatar">
 <header>
 	<title>Joe Exotic</title>
 	<h1>Joe Exotic</h1>
+	<div style="background-image: url('img/tiger-skin.jpeg');">
 </header>
 
 
@@ -30,7 +30,6 @@
 <footer>This website is brought to you by a teenager who is bored in quaranine &copy;</footer>
 <style>
 	header{
-	background-color: orange;
 	padding: 50px;
 	margin: 0;
 }
@@ -56,7 +55,6 @@ h2, h3{
 }
 body{
 	background-color: black;
-	imag
 }
 </style>
 </html>
