--- a/index.html
+++ b/index.html
@@ -56,8 +56,11 @@ h2, h3{
 body{
 	background-color: black;
 }
-header p{
-	color: orange;
+footer{
+	background-color: orange;
+}
+footer p{
+	color: black;
 }
 
 </style>
