--- a/index.html
+++ b/index.html
@@ -3,20 +3,17 @@
 <link rel="stylesheet" type="text/css" href="css/index.css">
 <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 <link rel="icon" href="img/tiger.jpeg">
+
 <header>
 	<title>Joe Exotic</title>
 	<h1>Joe Exotic</h1>
 	<div style="background-image: url('img/tiger-skin.jpeg');">
 </header>
-
-
 <body>
 <h2> About Joe</h2>
 <img src="img/joe-exotic.jpeg">
 <p> Joe Exotic is a gun-using, foul-talking, man-loving cowboy. He used to own a private Zoo, constantly in contest with animal-rights people. Joe is serving many sentences in prison, including voilation of the Animal Rights Act and the attempted murder of Carole Baskin. After being moved, Joe is now at Federal Medical Center Fort Worth recieving medical treatment. </p>
-
 <h2> Joe's Enemies</h2>
-
 <h3> Doc Antle</h3>
 <img src="img/doc-antle.jpeg">
 <p> Although once friends, Doc Antle and Joe were once good friends, this frienship turned sour after more Joe decided to take other large private-zoo-owners with him in a final blaze of glory. However, Doc Antle still owns his zoo and, along with a thriving social media presence, his business continues to grow.</p>
@@ -28,6 +25,8 @@
 <p> Again, this man was a friend of Joe to begin with, largely bailing him out of the situation with Baskin. However, he is also the reason for Joe's removal of the zoo and eventual imprisonement.</p>
 </body>
 <footer>This website is brought to you by a teenager who is bored in quaranine &copy;</footer>
+
+
 <style>
 	header{
 	padding: 50px;
@@ -58,6 +57,7 @@ body{
 }
 footer{
 	background-color: orange;
+	padding:20px;
 }
 footer p{
 	color: black;
