--- a/index.html
+++ b/index.html
@@ -11,17 +11,25 @@
 </header>
 <body>
 <h2> About Joe</h2>
-<img src="img/joe-exotic.jpeg">
+<div class="circular--landscape">
+  <img src="img/joe-exotic.jpeg" />
+</div>
 <p> Joe Exotic is a gun-using, foul-talking, man-loving cowboy. He used to own a private Zoo, constantly in contest with animal-rights people. Joe is serving many sentences in prison, including voilation of the Animal Rights Act and the attempted murder of Carole Baskin. After being moved, Joe is now at Federal Medical Center Fort Worth recieving medical treatment. </p>
 <h2> Joe's Enemies</h2>
 <h3> Doc Antle</h3>
-<img src="img/doc-antle.jpeg">
+<div class="circular--landscape">
+  <img src="img/doc-antle.com" />
+</div>
 <p> Although once friends, Doc Antle and Joe were once good friends, this frienship turned sour after more Joe decided to take other large private-zoo-owners with him in a final blaze of glory. However, Doc Antle still owns his zoo and, along with a thriving social media presence, his business continues to grow.</p>
 <h3> Carole Baskin</h3>
-<img src="img/carole-baskin.jpeg">
+<div class="circular--landscape">
+  <img src="img/carole-baskin.jpeg" />
+</div>
 <p> The leader of the animal rights group responsible for many attempts to close Joe's zoo, Carole Baskin is one of Joe's greatest enemies. After constant death threats from Exotic, she finally snapped and sued him for everything he's worth. This financial decline was a very important factor for the downfall of Joe Exotic. The reason for his imprisonement is also largely due to an attempted murder of Baskin. Her intentions, however, seem to be less than wholesome, being accused of murdering her own husband and feeding him to the tigers.
 <h3> Jeff Lowe</h3>
-<img src="jeff-lowe.jpeg">
+<div class="circular--landscape">
+  <img src="img/jeff-lowe.jpeg" />
+</div>
 <p> Again, this man was a friend of Joe to begin with, largely bailing him out of the situation with Baskin. However, he is also the reason for Joe's removal of the zoo and eventual imprisonement.</p>
 </body>
 <footer>This website is brought to you by a teenager who is bored in quaranine &copy;</footer>
@@ -58,6 +66,7 @@ body{
 }
 body img {
   border-radius: 50%;
+
 }
 footer{
 	background-color: orange;
