--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 </header>
 <body>
 <h2> About Joe</h2>
-<div class="circular--landscape">
-  <img src="img/joe-exotic.jpeg" />
-</div>
+<img class="circular--square" src="img/joe-exotic.jpeg" />
 <p> Joe Exotic is a gun-using, foul-talking, man-loving cowboy. He used to own a private Zoo, constantly in contest with animal-rights people. Joe is serving many sentences in prison, including voilation of the Animal Rights Act and the attempted murder of Carole Baskin. After being moved, Joe is now at Federal Medical Center Fort Worth recieving medical treatment. </p>
 <h2> Joe's Enemies</h2>
 <h3> Doc Antle</h3>
@@ -65,7 +63,7 @@ body{
 
 }
 body img {
-  border-radius: 50%;
+  border-radius: 50%
 
 }
 footer{
