--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <link rel="icon" href="img/tiger.jpeg">
 
 <header>
+	<header background="img/tiger-skin.jpeg">
 	<title>Joe Exotic</title>
 	<h1>Joe Exotic</h1>
 	<div style="background-image: url('img/tiger-skin.jpeg');">
