--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <link rel="icon" href="img/tiger.jpeg">
 
 <header>
-	<header background="img/tiger-skin.jpeg">
 	<title>Joe Exotic</title>
 	<h1>Joe Exotic</h1>
 </header>
@@ -31,6 +30,7 @@
 header{
 	padding: 50px;
 	margin: 0;
+	background-color: orange;
 }
 h1{
 	font-family: 'Permanent Marker', cursive;
@@ -54,7 +54,6 @@ h2, h3{
 }
 body{
 	background-color: black;
-
 }
 footer{
 	background-color: orange;
