--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 <link rel="icon" href="img/tiger.jpeg">
 
-<header>
+<header background="bgimage.jpg">
 	<title>Joe Exotic</title>
 	<h1>Joe Exotic</h1>
 </header>
