--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 <link rel="icon" href="img/tiger.jpeg">
 
-<header background="img/tiger-skin.jpeg">
+<header>
 	<title>Joe Exotic</title>
 	<h1>Joe Exotic</h1>
 </header>
@@ -66,6 +66,9 @@ footer p{
 }
 .img{
 	size: 200px;
+}
+.header-site{
+   background: #000000 url(img/tiger-skin.jpeg) 100% 100% no-repeat;
 }
 </style>
 </html>
